--- a/backend/package.json
+++ b/backend/package.json
@@ -13,21 +13,25 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^24.5.2",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.10",
     "rimraf": "^5.0.10",
+    "sequelize-cli": "^6.6.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "sequelize-cli": "^6.6.3"
+    "typescript": "^5.9.2"
   }
 }
