--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,15 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.15",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-
     "react-router-dom": "^6.26.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "swiper": "^12.0.2",
-
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
